codegen: Whitespace fixes

--- a/src/sonos-net-template/SonosDevice.hbs
+++ b/src/sonos-net-template/SonosDevice.hbs
@@ -1,17 +1,20 @@
 namespace Sonos.Base;
 
 using Sonos.Base.Services;
-public partial class SonosDevice {
+public partial class SonosDevice
+{
     {{#each services}}
     private {{name}}Service? _{{lower name}};
-    
+
     public {{name}}Service {{name}}Service
     {
-        get {
-          if(_{{lower name}} is null) {
-            _{{lower name}} = new {{name}}Service(ServiceOptions);
-          }
-          return _{{lower name}};
+        get
+        {
+            if (_{{lower name}} is null)
+            {
+                _{{lower name}} = new {{name}}Service(ServiceOptions);
+            }
+            return _{{lower name}};
         }
     }
     {{/each}}
