chore: Nullable Didl

--- a/src/sonos-net-template/Service.hbs
+++ b/src/sonos-net-template/Service.hbs
@@ -110,7 +110,7 @@ public partial class {{serviceName}} : SonosBaseService
         /// <summary>
         /// Parsed version of {{name}}
         /// </summary>
-        public Metadata.Didl {{name}}Object
+        public Metadata.Didl? {{name}}Object
         {
             get
             {
