ci: Prepare release

--- a/src/sonos-net-template/Service.hbs
+++ b/src/sonos-net-template/Service.hbs
@@ -31,8 +31,7 @@ public partial class {{serviceName}} : SonosBaseService
     /// <summary>
     /// Create a new {{serviceName}}
     /// </summary>
-    /// <param name="sonosUri">Base URL of the speaker</param>
-    /// <param name="httpClient">Optionally, a custom HttpClient.</param>
+    /// <param name="options">Service options</param>
     public {{serviceName}}(SonosServiceOptions options) : base("{{name}}", "{{controlURL}}", "{{eventSubURL}}", options) { }
 
     {{#each actions}}
